# advanced_middleware

./: .config-template.yml  .config.yml  README.md  context.json  dataset.json  edal.json  exanded_edal.json  expanded.json  main.py  parse_jsonld.py  pyproject.toml  requirements.txt  test.isa.investigation.xlsx
person_test/: context.jsonld  organization.jsonld  person.jsonld  renormalize.py
