[tool.poetry]
name = "m4-2-advanced-middleware"
version = "0.1.0"
description = "Advance middleware"
authors = ["Jorge García Brizuela <jorgito910202@gmail.com>"]
readme = "README.md"
packages = [{include = "m4"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
